--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8">
   
-  <title>烟花模拟器-欢哥科技</title>
+  <title>烟花模拟器FOR HSZZ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -46,7 +46,7 @@
 <div class="container">
 	<div class="loading-init">
 		<div class="loading-init__header">加载中</div>
-		<div class="loading-init__status">献给你爱的TA</div>
+		<div class="loading-init__status">献给XXX</div>
 	</div>
 	<div class="stage-container remove">
 		<div class="canvas-container">
@@ -72,10 +72,10 @@
 				<div class="menu__header">设置</div>
 				<div class="menu__subheader" align="center">Tips：1.你可以在这里设置相关参数<br>
                 2.用手或者鼠标横向滑动下边界可以调节燃放速度哦！<br>点击屏幕可以控制燃放数量！<br>3.电脑键盘快捷键： P-暂停 O-设置<br>
-                <br>微信公众号：欢哥科技<br>官方QQ群：
-               <b>613509111</b>,欢迎加入！<br><br>
-                <img alt="感谢支持！" src="img/20210520145355.webp" width="100" height="100"><br>
-                <br>我们的其他产品：<a href="https://quickso.cn/" target="_blank"><b>快点搜-搜索，快一点！</b></a> ，欢迎使用！
+                <br> <br> 
+               <b> </b>, <br><br>
+                <img alt=" " src="img/202105 " width="100" height="100"><br>
+                <br> ：<a href=" " target="_blank"><b> </b></a> ， 
                 </div>
 				<form>
 					<div class="form-option form-option--select">
@@ -119,9 +119,9 @@
 						<input class="long-exposure" type="checkbox">
 					</div>
 				</form>
-				<div class="credits">如果您觉得本项目给您带来了快乐，欢迎捐赠我们<br>
-                    点击这里→ <a href="https://huangetech.gitee.io/pay/index2.html" target="_blank"><b>捐赠❤</b></a>  <br>一分也是爱~<br>
-					LOVE ❤ by <a href="https://quickso.cn/" target="_blank">欢哥科技</a>.
+				<div class="credits"> <br>
+                   <a href="h l" target="_blank"><b> </b></a>  <br> ~<br>
+					LOVE ❤ by <a href="https://quickso.cn/" target="_blank">HSZZ</a>.
 				</div>
 			</div>
 		</div>
